# rust-pastebin-rocket

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: error.rs  main.rs  paste.rs
src/jwt/: claim.rs  error.rs  mod.rs  token.rs
src/user/: base_struct.rs  error.rs  form_structs.rs  helper_structs.rs  mod.rs
