[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json", "serde_json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
strum_macros = "0.26.4"
thiserror = "1.0.63"
totp-rs = { version = "5.5.1", features = ["qr"] }
